<resources>
    <string name="app_name">Gastos de Viagem</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="seu_gasto_ser_de">SEU GASTO SERÁ DE:</string>
    <string name="r_0_0">R$ 0,00</string>
    <string name="calcular">CALCULAR</string>
</resources>