<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingTop="16dp"
    android:paddingRight="8dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Distância"
        android:hint="@string/distancia"
        android:inputType="numberDecimal"
        android:paddingTop="18dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_de_quilometros"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Preço"
        android:hint="@string/preco"
        android:inputType="numberDecimal"
        android:paddingTop="18dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preco_por_litro"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edtAutonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Autonomia"
        android:hint="@string/autonomia"
        android:inputType="numberDecimal"
        android:paddingTop="18dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kms_por_litro"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:text="@string/seu_gasto_ser_de"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txvValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        android:text="@string/r_0_0"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/calcular"
        android:textSize="24sp" />

</LinearLayout>